# NFLogging

./: .gitignore  CMakeLists.txt  README.md
Example/: CMakeLists.txt  main.cpp
Examples/: CMakeLists.txt
Examples/SimpleLog/: CMakeLists.txt  main.cpp  testclass.cpp  testclass.h
Source/: CMakeLists.txt
Source/Private/: LogCategory.cpp  NFLogCategoryManager.cpp  NFLogCategoryManager.h  NFLogMessage.cpp  NFLogging.cpp  NFLoggingCore.cpp  NFLoggingCore.h  NFLogging_Priv.h
Source/Public/: NFLogCategory.h  NFLogCategoryManager.h  NFLogLevel.h  NFLogMacros.h  NFLogMessage.h  NFLogging.h  NFLoggingCommon.h
